0.03
 - Add bigger test for cdata.
 - Fix Makefile.PL fails with no '.' in @INC.
 - Update Module::Install to 1.19 version.
 - Update author github username.
 - Update author name.

0.02 2016-04-20T17:04:58+02:00
 - Fix dependencies to PYX::Utils.

0.01 2016-04-20T17:00:44+02:00
 - First version.