@@ -84,8 +84,9 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © Michal Josef Špaček 2015-2016
-     BSD 2-Clause License
+    © Michal Josef Špaček 2015-2016
+
+    BSD 2-Clause License
 
 VERSION
     0.03
